--- a/.github/workflows/infra-ci.yml
+++ b/.github/workflows/infra-ci.yml
@@ -37,6 +37,15 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
+      
+      - name: Instalar ferramentas de lint
+        run: pip install -r ../lambda/dev-requirements.txt
+
+      - name: Verificar lint com flake8
+        run: flake8 ../lambda/app
+
+      - name: Verificar formatação com black
+        run: black --check ../lambda/app    
 
       - name: Terraform Init
         run: terraform init
