--- a/.github/workflows/infra-ci.yml
+++ b/.github/workflows/infra-ci.yml
@@ -8,10 +8,9 @@ on:
 
 jobs:
   plan:
-    name: Terraform Plan
+    name: Terraform Validate + Plan
     runs-on: ubuntu-latest
 
-    # Só roda se a branch for feature/* e o PR não for rascunho
     if: startsWith(github.head_ref, 'feature/') && github.event.pull_request.draft == false
 
     permissions:
@@ -36,10 +35,13 @@ jobs:
       - name: Instalar Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.6.6  
+          terraform_version: 1.6.6
 
       - name: Terraform Init
         run: terraform init
+
+      - name: Terraform Validate
+        run: terraform validate
 
       - name: Terraform Plan
         run: terraform plan
