--- a/.github/workflows/infra-apply-main.yml
+++ b/.github/workflows/infra-apply-main.yml
@@ -19,8 +19,10 @@ jobs:
         working-directory: terraform
 
     steps:
-      - name: Checkout código
+      - name: Checkout código (com histórico completo)
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Configurar credenciais AWS
         uses: aws-actions/configure-aws-credentials@v2
@@ -48,14 +50,17 @@ jobs:
         run: |
           if [ "${{ github.event.before }}" = "0000000000000000000000000000000000000000" ]; then
             echo "Primeiro commit detectado — forçando upload."
-            echo "CHANGED=true" >> $GITHUB_OUTPUT
+            echo "CHANGED=true" >> $GITHUB_ENV
           else
-            CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q 'frontend/public/index.html' && echo true || echo false)
-            echo "CHANGED=$CHANGED" >> $GITHUB_OUTPUT
+            if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q 'frontend/public/index.html'; then
+              echo "CHANGED=true" >> $GITHUB_ENV
+            else
+              echo "CHANGED=false" >> $GITHUB_ENV
+            fi
           fi
 
       - name: Fazendo upload do Frontend no S3
-        if: steps.detect_index.outputs.CHANGED == 'true'
+        if: env.CHANGED == 'true'
         run: |
           aws s3 cp frontend/public/index.html s3://$S3_BUCKET_NAME/index.html --acl public-read
         env:
